finally working zappa (with virtualenv)! add test commands, add potential docker deploy option

--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -3,12 +3,12 @@
         "aws_region": "us-east-1",
         "app_function": "casatunes_controls.app",
         "s3_bucket": "alexa-casatunes",
-        "use_precompiled_packages": false
+        "use_precompiled_packages": true
     },
     "production": {
         "aws_region": "us-east-1",
         "app_function": "casatunes_controls.app",
         "s3_bucket": "alexa-casatunes",
-        "use_precompiled_packages": false
+        "use_precompiled_packages": true
     }
 }
