--- a/casa_config.json
+++ b/casa_config.json
@@ -1,5 +1,5 @@
 {
-  "SERVER_IP": "http://192.168.1.20",
+  "LOCAL_SERVER_ROUTE": "http://192.168.1.20",
   "SERVICE_ROUTE": "CasaTunes/CasaService.svc",
   "HEADERS": {
     "Content-Type": "application/json"
