--- a/casa_config.json
+++ b/casa_config.json
@@ -1,9 +1,5 @@
 {
   "LOCAL_SERVER_ROUTE": "http://192.168.1.20",
-  "SERVICE_ROUTE": "CasaTunes/CasaService.svc",
-  "HEADERS": {
-    "Content-Type": "application/json"
-  },
   "ROOM_ZONE_MAP": {
     "Outside": 9,
     "Wine Room Audio": 10,
@@ -20,6 +16,6 @@
     "Master Bath": 21,
     "Bill's Office": 22
   },
-  "DEFAULT_ROOM": "Kitchen 1",
+  "DEFAULT_ROOM": 17,
   "DEFAULT_QUEUE_TYPE": "ADD_AND_PLAY"
 }
