--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,53 @@
-boto3
+aniso8601==1.2.0
+appdirs==1.4.3
+argcomplete==1.8.2
+asn1crypto==0.22.0
+awscli==1.11.56
+base58==0.2.4
+boto3==1.4.4
 botocore==1.5.40
-flask-ask
-flask
-fuzzywuzzy
-paramiko
-zappa
+cffi==1.10.0
+click==6.7
+colorama==0.3.7
+cryptography==1.8.1
+docutils==0.13.1
+durationpy==0.4
+Flask==0.12.1
+Flask-Ask==0.8.8
+Flask-Inject==1.1.0
+future==0.16.0
+futures==3.1.1
+fuzzywuzzy==0.15.0
+hjson==2.0.2
+idna==2.5
+itsdangerous==0.24
+Jinja2==2.9.6
+jmespath==0.9.2
+kappa==0.6.0
+lambda-packages==0.14.2
+MarkupSafe==1.0
+packaging==16.8
+paramiko==2.1.2
+placebo==0.8.1
+pudb==2017.1.2
+pyasn1==0.2.3
+pycparser==2.17
+Pygments==2.2.0
+pyOpenSSL==16.2.0
+pyparsing==2.2.0
+python-dateutil==2.6.0
+python-Levenshtein==0.12.0
+python-slugify==1.2.4
+PyYAML==3.12
+requests==2.13.0
+rsa==3.4.2
+s3transfer==0.1.10
+six==1.10.0
+toml==0.9.2
+tqdm==4.11.2
+troposphere==1.9.3
+Unidecode==0.4.20
+urwid==1.3.1
+Werkzeug==0.12
+wsgi-request-logger==0.4.6
+zappa==0.41.0
